# eval-crypt

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  eval-crypt.key  mypy.ini  pyproject.toml  secret.txt  secrets.txt  supersecret.txt
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  tasks.json
eval_crypt/: cli.py  crypto.py  filters.py  git_config.py  gitattributes.py  hooks.py
tests/: test_cli.py  test_crypto.py  test_e2e.py  test_filters.py  test_gitattributes.py  test_hooks.py
