[build-system]
requires = ["setuptools==69.0.2"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-crypt"
version = "0.1.0"
description = "A tool to encrypt sensitive AI safety evaluation files in Git repositories"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "click==8.1.7",
    "pycryptodome==3.19.0",
    "pre-commit==3.5.0",
]

[project.scripts]
eval-crypt = "eval_crypt.cli:main" 